--- a/day5_resolutions/Cargo.toml
+++ b/day5_resolutions/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "day5"
+name = "day5_resolutions"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-text_io = "0.1.12"
