--- a/rusty_aws/Cargo.toml
+++ b/rusty_aws/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aws-config = { version= "1.1.7", features = ["behavior-version-latest"] }
+aws-sdk-dynamodb = "1.16.1"
+tokio = { version = "1", features = ["full"] }
